[package]
name = "cheetah"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
lsp-server = "0.7.4"
normpath = "1.1.1"
notify-debouncer-full = { version = "0.2.0", default-features = false }
same-file = "1.0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
